fix(layout): constrain content to align better

--- a/8bit.Host/src/number-pad/component.css
+++ b/8bit.Host/src/number-pad/component.css
@@ -6,6 +6,7 @@
 }
 
 table {
+    margin-left: auto;
     table-layout: fixed;
     font-size: inherit;
 }
